# word-to-pdf-api

./: .gitignore  Dockerfile  LICENSE  README.md  client.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
mre/: client.py  requirements.txt  server.py  test__client.py
src/: server.py
tasks/: format.py
test/: dummy_doc.docx  test__server.py  test__server__api.py  test__server__web_ui.py  util.py
