[project]
name = "word-to-pdf-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Aguiar",email = "72931357+codespearhead@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
