[project]
name = "word-to-pdf-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Aguiar",email = "72931357+codespearhead@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
]

[dependency-groups]
test = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pypdfium2 (>=5.6.0,<6.0.0)",
    "pillow (>=12.1.1,<13.0.0)"
]
format = [
    "ruff (>=0.15.7,<0.16.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
